--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
 
 @layer base {
   :root {
+    font-family: "sans-serif, Roboto";
+
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
